Cleanups and update to .net7

--- a/Laerdal.Dfu/Laerdal.targets
+++ b/Laerdal.Dfu/Laerdal.targets
@@ -1,36 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
-
     <!-- ==================== DEFAULT CONFIGURATION ==================== -->
     <PropertyGroup>
-        <Optimize>false</Optimize>
-        <LangVersion>latest</LangVersion>
-        <NeutralLanguage>en</NeutralLanguage>
-        <DebugSymbols>true</DebugSymbols>
-        <OutputPath>bin\</OutputPath>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-        <OutputType>Library</OutputType>
-
-        <PackOnBuild>true</PackOnBuild>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-        <IncludeSource>True</IncludeSource>
-        <IncludeSymbols>True</IncludeSymbols>
+        <IncludeSource>true</IncludeSource>
+        <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-
-        <!-- see : https://cezarypiatek.github.io/post/managing-output-in-sdk-projects/ -->
-        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <!-- MSB9004 : ManifestResourceWithNoCulture item type is deprecated. -->
-        <MSBuildWarningsAsMessages>$(MSBuildWarningsAsMessages);MSB9004</MSBuildWarningsAsMessages>
-        <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-
         <Deterministic>true</Deterministic>
+        <ImplicitUsings>true</ImplicitUsings>
     </PropertyGroup>
 
     <!-- ==================== DEFAULT CI CONFIGURATION ==================== -->
     <PropertyGroup>
+        <ContinuousIntegrationBuild>false</ContinuousIntegrationBuild>
         <!-- https://learn.microsoft.com/en-us/azure/devops/pipelines/build/variables?view=azure-devops&tabs=yaml&WT.mc_id=DT-MVP-5003978#system-variables -->
         <ContinuousIntegrationBuild Condition="'$(TF_BUILD)' == 'true'">true</ContinuousIntegrationBuild>
         <!-- https://help.github.com/en/actions/configuring-and-managing-workflows/using-environment-variables -->
@@ -38,6 +21,7 @@
         <!-- https://docs.gitlab.com/ee/ci/variables/predefined_variables.html -->
         <ContinuousIntegrationBuild Condition="'$(GITLAB_CI)' == 'true'">true</ContinuousIntegrationBuild>
     </PropertyGroup>
+
     <!-- ==================== PACKAGING ==================== -->
     <PropertyGroup>
         <!-- Laerdal_Package_Name -->
@@ -56,16 +40,18 @@
         <Description>$(Laerdal_Package_Description)</Description>
         <PackageDescription>$(Laerdal_Package_Description)</PackageDescription>
 
+        <!-- Laerdal_Package_Output -->
+        <PackageOutputPath Condition="'$(PackageOutputPath)' == ''" >$(Laerdal_Package_Output)</PackageOutputPath>
+        <PackageOutputPath Condition="'$(PackageOutputPath)' == '' ">$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), `../Output/`))</PackageOutputPath> <!-- default -->
+        
         <!-- Extra files and properties -->
         <PackageTags>Laerdal;Internal;$(Laerdal_Package_Tags)</PackageTags>
-        <PackageOutputPath Condition="'$(PackageOutputPath)' == ''">$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), `../Output/`))</PackageOutputPath>
         <PackageIconPath>$([System.IO.Path]::Combine($(MSBuildProjectDirectory), `../icon.png`))</PackageIconPath>
         <PackageLicencePath>$([System.IO.Path]::Combine($(MSBuildProjectDirectory), `../LICENSE`))</PackageLicencePath>
         <PackageReadMePath>$([System.IO.Path]::Combine($(MSBuildProjectDirectory), `../README.md`))</PackageReadMePath>
         <PackageIcon Condition="Exists('$(PackageIconPath)')">icon.png</PackageIcon>
         <PackageLicenseFile Condition="Exists('$(PackageLicencePath)')">LICENSE</PackageLicenseFile>
-        <!-- https://github.com/NuGet/Home/issues/10791 -->
-        <PackageReadmeFile Condition="Exists('$(PackageReadMePath)') AND '$(MSBuildRuntimeType)' != 'Mono'">README.md</PackageReadmeFile>
+        <PackageReadmeFile Condition="Exists('$(PackageReadMePath)')">README.md</PackageReadmeFile>
     </PropertyGroup>
     <ItemGroup>
         <None Include="$(PackageIconPath)" Pack="true" PackagePath="\" Condition="Exists('$(PackageIconPath)')" />
@@ -88,33 +74,27 @@
     </ItemGroup>
 
     <!-- ==================== LOGGING ==================== -->
-    <Target Name="PrintBuildInfo" BeforeTargets="_IsProjectRestoreSupported">
+    <Target Name="PrintBuildInfo" BeforeTargets="BeforeBuild">
         <Message Importance="High" Text="*** Package Info ***" />
         <Message Importance="High" Text="PackageId: $(PackageId)" />
         <Message Importance="High" Text="Configuration: $(Configuration)" />
+        <Message Importance="High" Text="TargetFramework: $(TargetFramework)" />
+        <Message Importance="High" Text="DefineConstants: $(DefineConstants)" />
         <Message Importance="High" Text="Platform: $(Platform)" />
         <Message Importance="High" Text="PackageVersion: $(PackageVersion)" />
         <Message Importance="High" Text="AssemblyVersion: $(AssemblyVersion)" />
         <Message Importance="High" Text="AssemblyFileVersion: $(AssemblyFileVersion)"/>
         <Message Importance="High" Text="Version: $(Version)" />
-        <Message Importance="High" Text="MSBuildRuntimeType: $(MSBuildRuntimeType)" />
-        <Message Importance="High" Text="##vso[build.updatebuildnumber]$(PackageVersion)" />
     </Target>
-    <Target Name="PrintPlatformBuildInfo" BeforeTargets="Compile">
-        <Message Importance="High" Text="*** Platform Info ***" />
-        <Message Importance="High" Text="TargetFramework: $(TargetFramework)" />
-        <Message Importance="High" Text="DefineConstants: $(DefineConstants)" />
-    </Target>
-    
+
     <!-- ==================== VERSION ==================== -->
     <PropertyGroup>
-        <Laerdal_Version_Assembly Condition="'$(Laerdal_Version_Assembly)' == ''">1.0.0.0</Laerdal_Version_Assembly>
-        <Laerdal_Version_Full Condition="'$(Laerdal_Version_Full)' == ''">1.0.0</Laerdal_Version_Full>
+        <Laerdal_Version Condition="'$(Laerdal_Version)' == ''">1.0.0-local.0</Laerdal_Version>
         <!-- Apply Version parts according to packaging standards -->
-        <AssemblyVersion>$(Laerdal_Version_Assembly)</AssemblyVersion>
-        <AssemblyFileVersion>$(Laerdal_Version_Assembly)</AssemblyFileVersion>
-        <AssemblyInformationalVersion>$(Laerdal_Version_Full)</AssemblyInformationalVersion>
-        <Version>$(Laerdal_Version_Full)</Version>
-        <PackageVersion>$(Laerdal_Version_Full)</PackageVersion>
+        <AssemblyVersion>$(Laerdal_Version)</AssemblyVersion>
+        <AssemblyFileVersion>$(Laerdal_Version)</AssemblyFileVersion>
+        <AssemblyInformationalVersion>$(Laerdal_Version)</AssemblyInformationalVersion>
+        <Version>$(Laerdal_Version)</Version>
+        <PackageVersion>$(Laerdal_Version)</PackageVersion>
     </PropertyGroup>
 </Project>
