--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Restore Workloads
-        run: dotnet workload restore
+        run: dotnet workload install ios android
         shell: bash
 
       - name: Restore
